Bug fix: now condition filters hidden by default

--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -1961,3 +1961,6 @@ kbd {
   display: none;
   text-align: center;
 }
+.cn-condition-dropdown-container {
+  display: none;
+}
